# zuy

./: pyproject.toml  ruff.toml
src/zuy/cli/: spectrum_cli.py
src/zuy/common/: dftools.py  logger.py  zlib.py
src/zuy/data/: 1.msa  19.msa  21.msa  2543v3.tex  2543v3.tsv  5.msa
src/zuy/semeds/: __init__.py  clean_df.py  convert_spectra.py  copy_result.py  df_cleanup.py  df_split.py  main.py  models.py  plot_element_correlations.py  save_outputs.py  split_samples.py
src/zuy/semeds/parse_gli_semeds_results/: copy_result.py  main.py  merge_xlsx.py
src/zuy/semeds/pipelines/: df_split.py  merge_xlsx.py  split_samples.py
src/zuy/spectrum/: baseline.py  cli.py  detect_peaks.py  emsa.py  io.py  models.py  plotting.py  processing.py  processing_interactive.py  squre_root_scale.py
src/zuy/spectrum/.trash/: baseline.py
src/zuy/spectrum/interactive/: processing_interactive.py
tests/: test_io.py  test_processing.py
tests/semeds/spectrum/: test_emsa.py
