[project]
name = "zuy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "mypy>=1.17.0",
    "natsort>=8.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.5",
]

[project.scripts]
sempy = "zuy.semeds.main:main"
semmerge = "zuy.semeds.merge_xlsx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "pandas-stubs>=2.3.2.250926",
    "matplotlib-stubs>=0.3.11",


]
[tool.ruff]
line-length = 99
# select = ["I"]  # Only import-related rules if you want
fix = true      # Enable auto-fixing